# learn-opengl

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: _fixes.hpp.A8A390ECE60A0A5C.idx  _vectorize.hpp.1162A6F73F820E9E.idx  camera.cpp.6A6CBFE4D0FB61C7.idx  camera.h.4E31CFC789262B4B.idx  common.hpp.A9F3E76917F490A9.idx  compute_common.hpp.F171900797D2E432.idx  compute_vector_relational.hpp.271C43A587324B02.idx  constants.hpp.07A447E09D2758CD.idx  constants.inl.B6C8605269952E43.idx  epsilon.hpp.637ED27B9C3BBDB1.idx  epsilon.inl.AE02B1CBFD584001.idx  exponential.hpp.CE29FF7D5BFB811B.idx  func_common.inl.D48CEEBCD852196D.idx  func_exponential.inl.63C0318541692F76.idx  func_geometric.inl.77B46F8DFB4E8142.idx  func_integer.inl.9CB5E3C1FBB6FC23.idx  func_matrix.inl.23D15CCFB63C8FA1.idx  func_packing.inl.30B392FF64D9772D.idx  func_trigonometric.inl.386FAB3E8D59EE6D.idx  func_vector_relational.inl.98021EE9705FA019.idx  fwd.hpp.D88F372E22E1E108.idx  geometric.hpp.E7BB1B57EE7CDE6B.idx  glad.c.2D04477FB8AA5A51.idx  glad.h.1558CDEAD103819A.idx  glfw3.h.5B0019B2511FED6D.idx  glfw3native.h.6D92BB710D506996.idx  glm.hpp.C2EE1B84249B0376.idx  imconfig.h.AE26B47996C4B80F.idx  imgui.cpp.8261116E25FF44D9.idx  imgui.h.47BFB6583F4A0090.idx  imgui_demo.cpp.245B24308780DD88.idx  imgui_draw.cpp.4523854F901627AE.idx  imgui_impl_glfw.cpp.0351C6F25A1A4FCC.idx  imgui_impl_glfw.h.BCB7FB9414F747BC.idx  imgui_impl_opengl3.cpp.A67328472913688B.idx  imgui_impl_opengl3.h.B518A44DF3A083ED.idx  imgui_impl_opengl3_loader.h.F6EE3664195B6367.idx  imgui_internal.h.8FD8946BD578F0BC.idx  imgui_tables.cpp.056AC3B0DA12F2A4.idx  imgui_widgets.cpp.1EFC19E767C85313.idx  (+172 more)
include/: camera.h  logger.h  settings.h  shader.h  vecMath.h
include/ImGui/: imgui_impl_glfw.h  imgui_impl_opengl3.h
include/glad/: glad.h
shaders/: lightingShader.frag
src/: camera.cpp  glad.c  logger.cpp  main.cpp  shader.cpp  stb_image_implementation.cpp
src/ImGui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
